<resources>
    <string name="app_name">RapierTech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Log In</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="add_data">Add Data</string>
    <string name="logout">Logout</string>
    <string name="login_btn">LOGIN</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_title_dialog">Add Data</string>
    <string name="alert_delete">Yes, delete it!</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="menu_item">Menu Item</string>
    <string name="title">Title</string>
    <string name="job">Job</string>
    <string name="address">Address</string>
    <string name="department">Department</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="role">Role</string>
    <string name="emp_status">Employee Status</string>
    <string name="join_date">Join Date</string>
    <string name="last_date">Last Date</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="helper_password">Fill this form, if you want to change the password</string>
    <string name="id">id</string>
    <string name="duration">Duration</string>
    <string name="reason">Reason</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="approve_confirm">Approve ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="employee">Employee</string>
    <string name="leave_type">Leave Type</string>
    <string name="half_day">Half Day</string>
    <string name="full_day">Full Day</string>
    <string name="status">Status</string>
    <string name="reject">Reject</string>
    <string name="reject_reason">Reject Reason</string>
    <string name="payslip">Payslip</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="payment">Payment</string>
    <string name="auto_payslip">Auto Generate Payslip</string>
    <string name="details">Details</string>
    <string name="print_to_pdf">Print to PDF</string>
    <string name="salary">Salary</string>
    <string name="allowance">Allowance</string>
    <string name="overtime">Overtime</string>
    <string name="deduction">Deduction</string>
    <string name="other">Other</string>
    <string name="action">Action</string>
    <string name="holiday_calendar">Holiday Calendar</string>
    <string name="holiday_list">Holiday List</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="add_event">Add Event</string>
    <string name="goal">Goal</string>
    <string name="project">Project</string>
    <string name="work">Work</string>
    <string name="attendance">Attendance</string>
    <string name="leave">Leave</string>
    <string name="hr">HR</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due">Due</string>
    <string name="created">Created</string>
    <string name="more">more</string>
    <string name="project_name">Project Name</string>
    <string name="category">Category</string>
    <string name="start_date">Start Date</string>
    <string name="deadline">Deadline</string>
    <string name="project_member">Project Member</string>
    <string name="project_summary">Project Summary</string>
    <string name="note">Note</string>
    <string name="add_project_category">Add Project Category</string>
    <string name="project_activity">Project Activity</string>
    <string name="submitted_by">Submitted by</string>
    <string name="notes_detail">Notes :</string>
    <string name="assigned_member_s">Assigned Member(s)</string>
    <string name="total_update_s">Total Update(s)</string>
    <string name="comment">Comment</string>
    <string name="download">Download</string>
    <string name="_1_attachment">1 Attachment</string>
    <string name="submit_an_update">Submit an Update</string>
    <string name="choose_file">Choose File</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_employee">Total Employees</string>
    <string name="departments">Departments</string>
    <string name="jobs">Jobs</string>
    <string name="projects">Projects</string>
    <string name="more_info">More Info</string>
    <string name="ongoing_projects">Ongoing Projects</string>
    <string name="view_all">View All</string>
    <string name="pending_leaves">Pending Leaves</string>
    <string name="type">Type</string>
    <string name="about_me">About Me</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_100_complete">100% Complete</string>

</resources>