<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>
    </group>

    <item
        android:title="@string/hr">

        <menu>

            <item
                android:id="@+id/nav_employee"
                android:icon="@drawable/ic_user"
                android:title="@string/employee" />
            <item
                android:id="@+id/nav_department"
                android:icon="@drawable/ic_department"
                android:title="@string/department" />
            <item
                android:id="@+id/nav_job"
                android:icon="@drawable/ic_job"
                android:title="@string/job" />
            <item
                android:id="@+id/nav_leave"
                android:icon="@drawable/ic_leave"
                android:title="@string/leave" />
            <item
                android:id="@+id/nav_payslip"
                android:icon="@drawable/ic_payslip"
                android:title="@string/payslip" />
            <item
                android:id="@+id/nav_attendance"
                android:icon="@drawable/ic_attendance"
                android:title="@string/attendance" />

        </menu>
    </item>

    <item
        android:title="@string/work">
        <menu>

            <item
                android:id="@+id/nav_project"
                android:icon="@drawable/ic_project"
                android:title="@string/project" />
            <item
                android:id="@+id/nav_goal"
                android:icon="@drawable/ic_goal"
                android:title="@string/goal" />

        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_event"
                android:title="@string/event"
                android:icon="@drawable/ic_calendar"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>