<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="8"
    android:paddingHorizontal="@dimen/dimen_16">

    <TextView
        android:id="@+id/tvIdBasic"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/id"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvJobBasic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:text="@string/job"/>

    <TextView
        android:id="@+id/tvSalaryBasic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:text="@string/salary"/>

    <Button
        android:id="@+id/btnDeleteBasic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textSize="12sp"
        android:text="@string/delete"/>

</LinearLayout>