<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/dimen_8">

    <LinearLayout
        android:id="@+id/ll_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dimen_8">

            <TextView
                android:id="@+id/statusProject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="12sp"
                android:textColor="@color/light_blue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginEnd="@dimen/dimen_4"
                android:text="@string/due"
                android:textSize="12sp"
                android:textColor="?android:attr/textColorSecondary"
                />
            <TextView
                android:id="@+id/deadlineProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@color/light_blue"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/nameProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:textSize="12sp"
                android:textColor="?android:attr/textColorSecondary"
                />
            <TextView
                android:id="@+id/createdProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@color/light_blue"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llImageMemberProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/moreMemberProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:text="@string/more"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>