<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.leave.LeaveEditorFragment"
    android:padding="@dimen/dimen_16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle"
                android:padding="16dp"
                android:divider="@drawable/empty_tall_divider">

                <TextView
                    android:id="@+id/tvIdLeaveEditor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfEmpLeaveEditor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/tvEmpLeaveEditor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfTypeLeaveEditor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/leave_type">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/tvTypeLeaveEditor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rgDurationLeaveEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rbFullDay"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/dimen_16"
                        android:text="@string/duration" />

                    <RadioButton
                        android:id="@+id/rbFullDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_day"/>

                    <RadioButton
                        android:id="@+id/rbHalfDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/half_day"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfFromDateLeave"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/from_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFromDateLeave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfToDateLeave"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:hint="@string/to_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etToDateLeave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfStatusLeaveEditor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/tvStatusLeaveEditor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfReasonLeaveEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reason"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etReasonLeaveEditor"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:inputType="text|textMultiLine"
                        android:gravity="top" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>


</ScrollView>