<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.payslip.BasicSalaryFragment"
    android:padding="@dimen/dimen_8">

    <LinearLayout
        android:id="@+id/llHeaderBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/job"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/salary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/action"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:id="@+id/dividerBasic"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llHeaderBasic"
        android:layout_marginVertical="@dimen/dimen_4"
        android:background="@android:color/darker_gray"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlBasicSalary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dividerBasic">

        <ListView
            android:id="@+id/listviewBasicSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/loadingBasicSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addBasicSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/add_data"
        app:backgroundTint="@color/primary"
        app:tint="@color/white"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>